--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vuetify-nuxt-module": "^0.18.3"
   },
   "devDependencies": {
+    "sass-embedded": "^1.87.0",
     "vite-plugin-vuetify": "^2.1.0",
     "vuetify": "^3.7.16"
   }
