--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev --https --key server.key --cert server.crt",
+    "dev": "nuxt dev",
+    "dev https": "nuxt dev --https --key server.key --cert server.crt",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "start": "nuxt start"
+    "start": "nuxt start",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "dependencies": {
     "@intlify/core-base": "^11.1.3",
@@ -18,18 +21,22 @@
     "@nuxtjs/i18n": "^9.5.3",
     "@nuxtjs/tailwindcss": "^6.13.2",
     "@pinia/nuxt": "^0.10.1",
+    "@stomp/stompjs": "^7.1.1",
     "@tailwindcss/vite": "^4.0.14",
     "bootstrap": "^5.3.3",
     "nuxt": "^3.15.4",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
     "postcss-cli": "^11.0.1",
+    "sockjs-client": "^1.6.1",
     "vue": "^3.5.13",
     "vue-router": "latest",
     "vue3-toastify": "^0.2.8",
     "vuetify-nuxt-module": "^0.18.3"
   },
   "devDependencies": {
+    "@types/sockjs-client": "^1.5.4",
+    "cypress": "^14.4.0",
     "sass-embedded": "^1.87.0",
     "vite-plugin-vuetify": "^2.1.0",
     "vuetify": "^3.7.16"
